2012-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  plot ... using "a":"b" was not setting the 
	parse_1st_row_as_headers flag.  Bug #3536514

2012-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (draw_new_pens) src/win/wgnuplib.h (struct GW)
	term/win.trm (WIN_options): Terminal option "rounded|butt".

2012-06-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/approximate.dem demo/cities.dem demo/enhanced-utf8.dem
	demo/epslatex.dem demo/fontfile.dem demo/fontfile_latex.dem
	demo/hypertext.dem demo/transparent.dem demo/utf8.dem:
	Restore original encoding.

	* src/set.c (set_encoding): Allow string valued variables as
	parameters.

2012-06-23  Jérôme lodewyck  <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/qt_term.cpp
	src/qtterminal/qt_term_mac.m: Proper handling of the qt terminal dock
	icons on Mac OS

2012-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datablock.c src/datablock.h:  New files
	
	* src/command.c src/datafile.c src/eval.c src/fit.c src/gp_types.h
	src/Makefile.am src/misc.c src/parse.c src/scanner.c src/show.c
	src/stats.c src/tables.c:  Add support for named data blocks.

	* docs/gnuplot.doc demo/imageNaN.dem demo/heatmaps.dem:
	Document and provide demos for named data blocks.

	Example use of named data blocks:
	$Mydata << EOD
	1 2 3
	4 5 6
	EOD
	stats $Mydata using 1:2
	plot $Mydata using 1:2 with lines, $Mydata using 1:3 with impulse
	set print 'save.data'; print $Mydata

2012-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Cleaned blank-only lines.

	* docs/Makefile.in: Regenerated.

	* docs/Makefile.am (BUILT_SOURCES): allterm.h belongs here.
	(doc2ms_DEPENDENCIES, doc2tex_DEPENDENDIES)
	(alldoc2gih_DEPENDENCIES): Removed allterm.h from these, since
	that would only cause it to be built at link time, which is too
	late.
	(check-local): Renamed from check, which would collide with