@@ -1,6 +1,7 @@
 New features, changes and fixes since gnuplot version 4.6
 =========================================================
 
+* NEW plot title can be placed next to the plot line in the graph proper
 * NEW inline data can be stored for reuse in named data blocks
 * NEW hypertext labels can be displayed on mouse-over
 * NEW geographic (Degrees Minutes Seconds) data axes
